gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-routes
  namespace: gateway
spec:
  parentRefs:
    - name: llm-gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/models/gpt2
      backendRefs:
        - name: gpt2-inference-predictor
          namespace: kserve
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /keras
      backendRefs:
        - name: keras-api
          namespace: keras-pipeline
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /queue
      backendRefs:
        - name: keras-api
          namespace: keras-pipeline
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: frontend
          port: 80
